<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, AGraphicsActivity!</string>
    <string name="app_name">AGraphics</string>
	<string name="btn_start">Start</string>
	<string name="btn_select_interpolator">Select Interpolator</string>

	    <!-- PreferenceActivity -->
	<string name="pre_key_demo_basic">AGraphics_Demo_key</string>
	<string name="pre_title_demo_basic">AGraphics Demo</string>
	<string name="pre_key_linear_animation">linear_animation_key</string>
	<string name="pre_title_linear_animation">Linear Animation</string>
	<string name="pre_key_bitmap_animation">bitmap_animation_key</string>
	<string name="pre_title_bitmap_animation">Blur Effect</string>
	<!--  HighLight Pen -->
	<string name="pre_key_highlight_pen">high_light_pen_key</string>
	<string name="pre_title_highlight_pen">HighLight Pen</string>
	<!-- menu -->
	<string name="action_highlight_pen">HighLightPen</string>
    <string name="action_pencil">Pencil</string>
</resources>