<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
	  	android:key="@string/pre_key_demo_basic">
	  	<PreferenceScreen
	  	    android:key="@string/pre_key_linear_animation"
	  	    android:title="@string/pre_title_linear_animation" >
	  	    <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="xzy.android.agraphics"
                android:targetClass="xzy.android.agraphics.activity.LinearAnimationActivity"
            />
	  	</PreferenceScreen>
	  	<PreferenceScreen
	  	    android:key="@string/pre_key_bitmap_animation"
	  	    android:title="@string/pre_title_bitmap_animation" >
	  	    <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="xzy.android.agraphics"
                android:targetClass="xzy.android.agraphics.activity.BlurActivity"
            />
	  	</PreferenceScreen>
	  	<PreferenceScreen
	  	    android:key="@string/pre_key_highlight_pen"
	  	    android:title="@string/pre_title_highlight_pen" >
	  	    <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="xzy.android.agraphics"
                android:targetClass="xzy.android.agraphics.activity.HighLightPenActivity"
            />
	  	</PreferenceScreen>
  	</PreferenceCategory>
</PreferenceScreen>
